@@ -1,3 +1,8 @@
+2012-08-11  Bernd Schmidt  <bernds@codesourcery.com>
+
+	* reload1.c (replaced_subreg, gen_reload): Add
+	SECONDARY_MEMORY_NEEDED ifdefs as necessary.
+
 2012-08-11  Jan Hubicka  <jh@suse.cz>
 
 	* lto-section-in.c (lto_section_name): Do not use "symtab" as part of
